[tool.poetry]
name = "action-ecs-deploy"
version = "0.1.0"
description = "AWS ECS Deploy"
authors = ["moneymeets GmbH <service@moneymeets.com>"]

packages = [
    { include = "actions_helper" }
]

[tool.poetry.dependencies]
python = "~3.12"

click="*"
boto3 = "*"

[tool.poetry.dev-dependencies]
ruff = "*"
pytest = "*"
pytest-cov = "*"

[tool.poetry.scripts]
actions_helper = 'actions_helper.main:cli'

[tool.coverage.run]
branch = true
source = ["."]
omit = ["tests/*.py"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
